[WIP] Add new projects section and update CSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
 
     <nav>
         <a href="/">Home</a>
-        <a href="">New Projects</a>
+        <a href="/new-projects/">New Projects</a>
         <a href="/cv/">CV</a>
-        <a href="">About</a>
+        <a href="/about/">About</a>
         <a href="">Blog</a>
     </nav>
 
