--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,13 @@
     padding: 0;
     box-sizing:border-box;
     font-size: 0;
-} 
+}
 
-h4 {
+body {
+    background-color: black;
+}
+
+h1, h2, h3, h4, h5 {
     font-size: 20px;
 }
 
@@ -27,7 +31,7 @@ p {
 nav {
     text-align: center;
     padding: 15px;
-    /* font-family: Futura Std Book; */
+    background-color: white;
 }
 
 nav a {
@@ -56,10 +60,11 @@ nav a.active, nav a:hover {
 .main {
     text-align: center;
     padding: 40px;
+    background-color: white;
 }
 
 .header {
-    display: inline-block;
+    /* display: inline-block; */
     letter-spacing: 0.45em;
     padding: 40px;
 }
@@ -75,8 +80,22 @@ nav a.active, nav a:hover {
     font-size: 23px;
 }
 
+.footer {
+    text-align: center;
+    color: white;
+    padding: 40px;
+}
+
+.footer h2 {
+    font-size: 25px;
+    text-transform: uppercase;
+    letter-spacing: .45em;
+}
+
 .container {
     padding: 30px;
+     display: inline-block; 
+    max-width: 1000px;
 }
 
 .container.cv, .container.about {
@@ -125,4 +144,12 @@ nav a.active, nav a:hover {
 
 .conference {
     margin-bottom: 15px;
+}
+
+.new-projects h3 {
+    text-transform: uppercase;
+}
+
+.about p {
+    margin-bottom: 20px;
 }
