--- a/css/styles.css
+++ b/css/styles.css
@@ -232,3 +232,17 @@ nav a.active, nav a:hover {
     margin-top: 0;
     margin-right: 5px;
 }
+
+.social-media-icon {
+    width: 20px;
+    display: inline-block;
+    margin-right: 8px;
+}
+
+#twitter {
+    fill: #1DA1F2;
+}
+
+#instagram {
+    fill: #E4405F;
+}
