--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,9 +9,14 @@
     {% include nav.html %}
     <div class="main">
         <div class="container post">
-            <h1>{{ page.title }}</h1>
-            <h3>{{ page.date | date: "%B %-d, %Y" }}</h3>
-            {{ content }}
+            <div class="post-column post-post">
+                <h1 class="title">{{ page.title }}</h1>
+                <h3>{{ page.date | date: "%B %-d, %Y" }}</h3>
+                {{ content }}
+            </div>
+            <div class="post-column side-bar">
+                {% include sidebar.html %}
+            </div>
         </div>
     </div>
     {% include footer.html %}
