Refactor to make layout and styles more consistent

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,20 @@
     <div class="main">
         <div class="container post">
             <div class="post-column post-post">
-                <h1 class="title">{{ page.title }}</h1>
-                <h3>{{ page.date | date: "%B %-d, %Y" }}</h3>
-                {{ content }}
+                <div class="title-category">
+                    <h1 class="title">
+                        {{ page.title }}
+                    </h1>
+                    {% if page.category.size %}
+                        <a class="category" href="">{{ page.category }}</a>
+                    {% endif %}
+                </div>
+                <h5 class="date-author">
+                    {{ page.date | date: "%B %-d, %Y" }} | {{ page.author }}
+                </h5 class="date-author">
+                <div class="post-content">
+                    {{ content }}
+                </div>
             </div>
             <div class="post-column side-bar">
                 {% include sidebar.html %}
