Add sidebar to about page, and refactor to generalize content/sidebar layout

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,7 @@
     </div>
 </div>
 <div class="side-bar-item">
-    <h5 class="side-bar-item-title">Search by tags</h5>
+    <h5 class="side-bar-item-title">Search blog by tags</h5>
     <ul class="blog-tags-list">
         {% assign sorted_tags = site.tags | sort %}
         {% for tag in sorted_tags %}
