--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
     {% include nav.html %}
     <div class="main">
         <div class="container post">
-            <div class="post-column post-post">
+            <div class="column column-content">
                 <div class="title-category">
                     <h1 class="title">
                         {{ page.title }}
@@ -25,7 +25,7 @@
                     {{ content }}
                 </div>
             </div>
-            <div class="post-column side-bar">
+            <div class="column column-side-bar">
                 {% include sidebar.html %}
             </div>
         </div>
