--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,7 +14,7 @@
 </div>
 <div class="side-bar-item">
     <h5 class="side-bar-item-title">Search blog by tags</h5>
-    <ul class="blog-tags-list">
+    <ul class="side-bar-item-content blog-tags-list">
         {% assign sorted_tags = site.tags | sort %}
         {% for tag in sorted_tags %}
             {% assign t = tag | first %}
@@ -27,4 +27,16 @@
 </div>
 <div class="side-bar-item">
     <h5 class="side-bar-item-title">Featured posts</h5>
+    <div class="side-bar-item-content">
+        {% for post in site.posts %}
+            {% if post.featured %}
+                <div class="featured-post">
+                    <a href="#">
+                        {{ post.title }}
+                    </a>
+                    <p class="date">{{ post.date | date: "%B %-d, %Y" }}</p>
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
 </div>
