Adding social media icons to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,20 @@
 <div class="footer">
     <h2>Psychologist in progress</h2>
     <div class="container">
-        <div class="social-media"></div>
+        <div class="social-media-icons">
+            <a href="https://twitter.com/katewguan" id="twitter" class="social-media-icon">
+                {% include icons/twitter-icon.html %}
+            </a>
+            <a href="https://www.instagram.com/kataguan/" id="instagram" class="social-media-icon">
+                {% include icons/instagram-icon.html %}
+            </a>
+            <a href="#" id="pintrest" class="social-media-icon">
+                {% include icons/pintrest-icon.html %}
+            </a>
+        </div>
         <div class="mailing-list"></div>
-        <div class="copyright"></div>
+        <div class="copyright">
+            <p>Created with love by Jacky Van</p>
+        </div>
     </div>
 </div>
