Adding Research section

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,6 @@
 <nav>
     <a href="/">Home</a>
+    <a href="/research/">Research</a>
     <a href="/new-projects/">New Projects</a>
     <a href="/cv/">CV</a>
     <a href="/about/">About</a>
