Removing credits... and unwanted social media
- Style updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,16 +5,16 @@
             <a href="https://twitter.com/katewguan" id="twitter" class="social-media-icon">
                 {% include icons/twitter-icon.html %}
             </a>
-            <a href="https://www.instagram.com/kataguan/" id="instagram" class="social-media-icon">
+            <!-- <a href="https://www.instagram.com/kataguan/" id="instagram" class="social-media-icon">
                 {% include icons/instagram-icon.html %}
             </a>
             <a href="#" id="pintrest" class="social-media-icon">
                 {% include icons/pintrest-icon.html %}
-            </a>
+            </a> -->
         </div>
         <div class="mailing-list"></div>
-        <div class="copyright">
+        <!-- <div class="copyright">
             <p>Created with love by Jacky Van</p>
-        </div>
+        </div> -->
     </div>
 </div>
