Adding profile pic & updating footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
 <div class="footer">
-    <h2>Psychologist in progress</h2>
     <div class="container">
         <div class="social-media-icons">
             <a href="https://twitter.com/katewguan" id="twitter" class="social-media-icon">
@@ -13,8 +12,8 @@
             </a> -->
         </div>
         <div class="mailing-list"></div>
-        <!-- <div class="copyright">
+        <div class="copyright">
             <p>Created with love by Jacky Van</p>
-        </div> -->
+        </div>
     </div>
 </div>
