--- a/css/styles.css
+++ b/css/styles.css
@@ -325,6 +325,10 @@ nav a.active, nav a:hover {
     margin-right: 5px;
 }
 
+.social-media-icons {
+    margin-bottom: 40px;
+}
+
 .social-media-icon {
     width: 20px;
     display: inline-block;
