--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
         </div>
         <div class="mailing-list"></div>
         <div class="copyright">
-            <p>Created with love by Jacky Van</p>
+            <p>Created by Jacky Van</p>
         </div>
     </div>
 </div>
