Removing credits temporarily

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,8 @@
             </a> -->
         </div>
         <div class="mailing-list"></div>
-        <div class="copyright">
+        <!-- <div class="copyright">
             <p>Created by Jacky Van</p>
-        </div>
+        </div> -->
     </div>
 </div>
